--- a/index.html
+++ b/index.html
@@ -3,9 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>No title</title>
+    <title>I L Y</title>
+
+    <!-- Favicons -->
+    <link rel="shortcut icon" href="img/icons/favicon.png" type="image/x-icon">
 </head>
 <body>
-    <h1></h1>
+    <!--============= Navegacion =============-->
+    <nav id="menu" class="navbar">
+        <div class="container">
+
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
+                <a class="navbar-brand page-scroll" href="#page-top">Angela M.</a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#intro" class="page-scroll">intro</a></li>
+                    <li><a href="#Argumentos" class="page-scroll">Argumentos</a></li>
+                    <li><a href="#team" class="page-scroll">Anegdotas</a></li>
+                    <li><a href="#portfolio" class="page-scroll">Galeria</a></li>
+                    <li><a href="#call-reservation" class="page-scroll">Contactame</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 </body>
 </html>
