--- a/index.html
+++ b/index.html
@@ -29,7 +29,24 @@
                     <li><a href="#call-reservation" class="page-scroll">Contactame</a></li>
                 </ul>
             </div>
+            <!-- /.navbar-collapse -->
         </div>
     </nav>
+
+    <!-- ======= HEADER ======= -->
+    <header id="header">
+        <div class="intro">
+            <div class="overlay">
+                <div class="container">
+                    <div class="row">
+                        <div class="intro-text">
+                            <h1>Pq te quiero</h1>
+                            <p>Una pagina explicativa dedicada a Angela Muñoz.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
