--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#intro" class="page-scroll">intro</a></li>
                     <li><a href="#Argumentos" class="page-scroll">Argumentos</a></li>
-                    <li><a href="#team" class="page-scroll">Anegdotas</a></li>
-                    <li><a href="#portfolio" class="page-scroll">Galeria</a></li>
-                    <li><a href="#call-reservation" class="page-scroll">Contactame</a></li>
+                    <li><a href="#Anegdotas" class="page-scroll">Anegdotas</a></li>
+                    <li><a href="#Galeria" class="page-scroll">Galeria</a></li>
+                    <li><a href="#Contactame" class="page-scroll">Contactame</a></li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
