--- a/index.html
+++ b/index.html
@@ -9,44 +9,75 @@
     <link rel="shortcut icon" href="img/icons/favicon.png" type="image/x-icon">
 </head>
 <body>
-    <!--============= Navegacion =============-->
-    <nav id="menu" class="navbar">
-        <div class="container">
+<!--============= Navegacion =============-->
+<nav id="menu" class="navbar">
+    <div class="container">
 
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Angela M.</a>
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#intro" class="page-scroll">intro</a></li>
-                    <li><a href="#Argumentos" class="page-scroll">Argumentos</a></li>
-                    <li><a href="#Anegdotas" class="page-scroll">Anegdotas</a></li>
-                    <li><a href="#Galeria" class="page-scroll">Galeria</a></li>
-                    <li><a href="#Contactame" class="page-scroll">Contactame</a></li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
+    <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
+            <a class="navbar-brand page-scroll" href="#page-top">Angela M.</a>
         </div>
-    </nav>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#intro" class="page-scroll">intro</a></li>
+                <li><a href="#Argumentos" class="page-scroll">Argumentos</a></li>
+                <li><a href="#Historia" class="page-scroll">Historia</a></li>
+                <li><a href="#Galeria" class="page-scroll">Galeria</a></li>
+                <li><a href="#Contactame" class="page-scroll">Contactame</a></li>
+            </ul>
+        </div>
+        <!-- /.navbar-collapse -->
+    </div>
+</nav>
 
-    <!-- ======= HEADER ======= -->
-    <header id="header">
-        <div class="intro">
-            <div class="overlay">
-                <div class="container">
-                    <div class="row">
-                        <div class="intro-text">
-                            <h1>Pq te quiero</h1>
-                            <p>Una pagina explicativa dedicada a Angela Muñoz.</p>
-                        </div>
+<!-- ======= HEADER ======= -->
+<header id="header">
+    <div class="intro">
+        <div class="overlay">
+            <div class="container">
+                <div class="row">
+                    <div class="intro-text">
+                        <h1>¿Pq te quiero?</h1>
+                        <p>Una pagina explicativa dedicada a Angela Muñoz.</p>
+                        <a href="#intro" class="btn btn-custom btn-lg page-scroll">Descubrelo ya</a> </div>
                     </div>
                 </div>
             </div>
         </div>
-    </header>
+    </div>
+</header>
+
+<!--========= Intro Section ========-->
+<div id="Intro">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 col-md-6 ">
+                <div class="Intro-img"><img src="" class="img-responsive" alt=""></div>
+            </div>
+            <div class="col-xs-12 col-md-6">
+                <div class="Intro-text">
+                    <h2>Introducción</h2>
+                    <hr>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo nibh.</p>
+                    <h3>topico principal</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- ============ Argumentos ============ -->
+<div id="Argumentos">
+    <div class="section-title text-center center">
+        <div class="overlay">
+            <h2>Argumentos</h2>
+            <hr>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit, fugit.</p>
+        </div>
+    </div>
+</div>
 </body>
 </html>
