--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/estilos.css">
     <title>I L Y</title>
 
     <!-- Favicons -->
@@ -76,6 +77,122 @@
             <h2>Argumentos</h2>
             <hr>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit, fugit.</p>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 col-sm-6">
+                <div class="arguments-section">
+                    <h2 class="arguments-section-title">Lista1</h2>
+                    <hr>
+                    <div class="arguments-item">
+                        <div class="arguments-item-name"> Razon </div>
+                        <div class="arguments-item-price"> 00% </div>
+                        <div class="arguments-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
+                    </div>
+                    <div class="arguments-item">
+                        <div class="arguments-item-name"> Razon </div>
+                        <div class="arguments-item-price"> 00% </div>
+                        <div class="arguments-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
+                    </div>
+                    <div class="arguments-item">
+                        <div class="arguments-item-name"> Razon </div>
+                        <div class="arguments-item-price"> 00% </div>
+                        <div class="arguments-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
+                    </div>
+                    <div class="arguments-item">
+                        <div class="arguments-item-name"> Razon </div>
+                        <div class="arguments-item-price"> 00% </div>
+                        <div class="arguments-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
+                    </div>
+                </div>
+            </div>
+                  
+            <div class="col-xs-12 col-sm-6">
+                <div class="arguments-section">
+                    <h2 class="arguments-section-title">Lista2</h2>
+                    <hr>
+                    <div class="arguments-item">
+                       <div class="arguments-item-name"> Razon </div>
+                       <div class="arguments-item-price"> 50% </div>
+                       <div class="arguments-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
+                    </div>
+                    <div class="arguments-item">
+                       <div class="arguments-item-name"> Razon </div>
+                       <div class="arguments-item-price"> 00% </div>
+                       <div class="arguments-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
+                    </div>
+                    <div class="arguments-item">
+                       <div class="arguments-item-name"> Razon </div>
+                       <div class="arguments-item-price"> 00% </div>
+                       <div class="arguments-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
+                    </div>
+                    <div class="arguments-item">
+                       <div class="arguments-item-name"> Razon </div>
+                       <div class="arguments-item-price"> 00% </div>
+                       <div class="arguments-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
+                    </div>
+                </div>
+            </div>
+            </div>
+                <div class="row">
+                  <div class="col-xs-12 col-sm-6">
+                    <div class="arguments-section">
+                       <h2 class="arguments-section-title">Lista3</h2>
+                       <hr>
+                       <div class="arguments-item">
+                         <div class="arguments-item-name"> Razon </div>
+                         <div class="arguments-item-price"> 50% </div>
+                         <div class="arguments-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
+                    </div>
+                       <div class="arguments-item">
+                       <div class="arguments-item-name"> Razon </div>
+                       <div class="arguments-item-price"> 13% </div>
+                       <div class="arguments-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
+                    </div>
+                      <div class="arguments-item">
+                        <div class="arguments-item-name"> Razon </div>
+                        <div class="arguments-item-price"> 00% </div>
+                        <div class="arguments-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam.. </div>
+                      </div>
+                      <div class="arguments-item">
+                        <div class="arguments-item-name"> Razon </div>
+                        <div class="arguments-item-price"> 00% </div>
+                        <div class="arguments-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-xs-12 col-sm-6">
+                    <div class="arguments-section">
+                      <h2 class="arguments-section-title">Lista4</h2>
+                      <hr>
+                      <div class="arguments-item">
+                        <div class="arguments-item-name"> Razon </div>
+                        <div class="arguments-item-price"> 09% </div>
+                        <div class="arguments-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
+                      </div>
+                      <div class="arguments-item">
+                        <div class="arguments-item-name"> Razon </div>
+                        <div class="arguments-item-price"> 00% </div>
+                        <div class="arguments-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
+                      </div>
+                      <div class="arguments-item">
+                        <div class="arguments-item-name"> Razon </div>
+                        <div class="arguments-item-price"> 00% </div>
+                        <div class="arguments-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
+                      </div>
+                      <div class="arguments-item">
+                        <div class="arguments-item-name"> Razon </div>
+                        <div class="arguments-item-price"> 00% </div>
+                        <div class="arguments-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
