--- a/index.html
+++ b/index.html
@@ -1,200 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/estilos.css">
-    <title>I L Y</title>
-
-    <!-- Favicons -->
-    <link rel="shortcut icon" href="img/icons/favicon.png" type="image/x-icon">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/styles.css">
+  <title>Lista</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Potta+One&display=swap" rel="stylesheet">
 </head>
 <body>
-<!--============= Navegacion =============-->
-<nav id="menu" class="navbar">
-    <div class="container">
-
-    <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-            <a class="navbar-brand page-scroll" href="#page-top">Angela M.</a>
-        </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#intro" class="page-scroll">intro</a></li>
-                <li><a href="#Argumentos" class="page-scroll">Argumentos</a></li>
-                <li><a href="#Historia" class="page-scroll">Historia</a></li>
-                <li><a href="#Galeria" class="page-scroll">Galeria</a></li>
-                <li><a href="#Contactame" class="page-scroll">Contactame</a></li>
-            </ul>
-        </div>
-        <!-- /.navbar-collapse -->
-    </div>
-</nav>
-
-<!-- ======= HEADER ======= -->
-<header id="header">
-    <div class="intro">
-        <div class="overlay">
-            <div class="container">
-                <div class="row">
-                    <div class="intro-text">
-                        <h1>¿Pq te quiero?</h1>
-                        <p>Una pagina explicativa dedicada a Angela Muñoz.</p>
-                        <a href="#intro" class="btn btn-custom btn-lg page-scroll">Descubrelo ya</a> </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</header>
-
-<!--========= Intro Section ========-->
-<div id="Intro">
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12 col-md-6 ">
-                <div class="Intro-img"><img src="" class="img-responsive" alt=""></div>
-            </div>
-            <div class="col-xs-12 col-md-6">
-                <div class="Intro-text">
-                    <h2>Introducción</h2>
-                    <hr>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo nibh.</p>
-                    <h3>topico principal</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<!-- ============ Argumentos ============ -->
-<div id="Argumentos">
-    <div class="section-title text-center center">
-        <div class="overlay">
-            <h2>Argumentos</h2>
-            <hr>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit, fugit.</p>
-        </div>
-    </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12 col-sm-6">
-                <div class="arguments-section">
-                    <h2 class="arguments-section-title">Lista1</h2>
-                    <hr>
-                    <div class="arguments-item">
-                        <div class="arguments-item-name"> Razon </div>
-                        <div class="arguments-item-price"> 00% </div>
-                        <div class="arguments-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
-                    </div>
-                    <div class="arguments-item">
-                        <div class="arguments-item-name"> Razon </div>
-                        <div class="arguments-item-price"> 00% </div>
-                        <div class="arguments-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
-                    </div>
-                    <div class="arguments-item">
-                        <div class="arguments-item-name"> Razon </div>
-                        <div class="arguments-item-price"> 00% </div>
-                        <div class="arguments-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
-                    </div>
-                    <div class="arguments-item">
-                        <div class="arguments-item-name"> Razon </div>
-                        <div class="arguments-item-price"> 00% </div>
-                        <div class="arguments-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
-                    </div>
-                </div>
-            </div>
-                  
-            <div class="col-xs-12 col-sm-6">
-                <div class="arguments-section">
-                    <h2 class="arguments-section-title">Lista2</h2>
-                    <hr>
-                    <div class="arguments-item">
-                       <div class="arguments-item-name"> Razon </div>
-                       <div class="arguments-item-price"> 50% </div>
-                       <div class="arguments-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
-                    </div>
-                    <div class="arguments-item">
-                       <div class="arguments-item-name"> Razon </div>
-                       <div class="arguments-item-price"> 00% </div>
-                       <div class="arguments-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
-                    </div>
-                    <div class="arguments-item">
-                       <div class="arguments-item-name"> Razon </div>
-                       <div class="arguments-item-price"> 00% </div>
-                       <div class="arguments-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
-                    </div>
-                    <div class="arguments-item">
-                       <div class="arguments-item-name"> Razon </div>
-                       <div class="arguments-item-price"> 00% </div>
-                       <div class="arguments-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
-                    </div>
-                </div>
-            </div>
-            </div>
-                <div class="row">
-                  <div class="col-xs-12 col-sm-6">
-                    <div class="arguments-section">
-                       <h2 class="arguments-section-title">Lista3</h2>
-                       <hr>
-                       <div class="arguments-item">
-                         <div class="arguments-item-name"> Razon </div>
-                         <div class="arguments-item-price"> 50% </div>
-                         <div class="arguments-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
-                    </div>
-                       <div class="arguments-item">
-                       <div class="arguments-item-name"> Razon </div>
-                       <div class="arguments-item-price"> 13% </div>
-                       <div class="arguments-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
-                    </div>
-                      <div class="arguments-item">
-                        <div class="arguments-item-name"> Razon </div>
-                        <div class="arguments-item-price"> 00% </div>
-                        <div class="arguments-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam.. </div>
-                      </div>
-                      <div class="arguments-item">
-                        <div class="arguments-item-name"> Razon </div>
-                        <div class="arguments-item-price"> 00% </div>
-                        <div class="arguments-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-xs-12 col-sm-6">
-                    <div class="arguments-section">
-                      <h2 class="arguments-section-title">Lista4</h2>
-                      <hr>
-                      <div class="arguments-item">
-                        <div class="arguments-item-name"> Razon </div>
-                        <div class="arguments-item-price"> 09% </div>
-                        <div class="arguments-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
-                      </div>
-                      <div class="arguments-item">
-                        <div class="arguments-item-name"> Razon </div>
-                        <div class="arguments-item-price"> 00% </div>
-                        <div class="arguments-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
-                      </div>
-                      <div class="arguments-item">
-                        <div class="arguments-item-name"> Razon </div>
-                        <div class="arguments-item-price"> 00% </div>
-                        <div class="arguments-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
-                      </div>
-                      <div class="arguments-item">
-                        <div class="arguments-item-name"> Razon </div>
-                        <div class="arguments-item-price"> 00% </div>
-                        <div class="arguments-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+  <div class="general">
+    <header>
+      <h1>Cosas por hacer</h1>
+      <span class="linea"></span>
+    </header>
+    <section id="lista">
+      <div class="caja">
+        <h2>Usar collares iguales o complementarios</h2>
+      </div>
+      <div class="caja">
+        <h2>Tomarnos fotos para imprimirlas</h2>
+      </div>
+      <div class="caja">
+        <h2>Encuadrar una o mas fotos</h2>
+      </div>
+      <div class="caja">
+        <h2>poner una mini en la carcasa</h2>
+      </div>
+    </section>
+  </div>
 </body>
 </html>
