--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Lista</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Potta+One&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Potta+One&family=Work+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="general">
@@ -14,6 +16,7 @@
       <h1>Cosas por hacer</h1>
       <span class="linea"></span>
     </header>
+
     <section id="lista">
       <div class="caja">
         <h2>Usar collares iguales o complementarios</h2>
