--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
     </header>
 
     <section id="lista">
-      <div class="caja">
+      <div class="caja" id="caja1">
         <h2>Usar collares iguales o complementarios</h2>
       </div>
-      <div class="caja">
+      <div class="caja" id="caja2">
         <h2>Tomarnos fotos para imprimirlas</h2>
       </div>
-      <div class="caja">
+      <div class="caja" id="caja3">
         <h2>Encuadrar una o mas fotos</h2>
       </div>
-      <div class="caja">
+      <div class="caja" id="caja4">
         <h2>poner una mini en la carcasa</h2>
       </div>
     </section>
