--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     </header>
 
     <section id="lista">
+      <div class="caja" id="caja0">
+        <h2>Hablar cursi hoy</h2>
+      </div>
       <div class="caja" id="caja1">
         <h2>Usar collares iguales o complementarios</h2>
       </div>
@@ -29,6 +32,9 @@
       </div>
       <div class="caja" id="caja4">
         <h2>poner una mini en la carcasa</h2>
+      </div>
+      <div class="caja" id="caja5">
+        <h2>Quererte un poco menos</h2>
       </div>
     </section>
   </div>
