--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Web Project</title>
+    <link  rel="icon"   href="favicon.ico" type="image/ico"/>
+    <title>Calc para la U</title>
 </head>
 <body>
-    <h1>Calculadora</h1>
+    <h1>Calculadora de Angela M.</h1>
     <div class="contenedor-calc">
         <form class="calculator" name="calc">
             <input class="value" id="value" type="text" name="txt" readonly>
